# openenv-workflow

./: .dockerignore  Contract.md  Dockerfile  README.md  apis.py  app.py  env.py  environment.py  grader.py  inference.py  manual_test.py  openenv.yaml  pyproject.toml  requirements.txt  reward.py  tasks.py  tests.py
server/: app.py
