[project]
name = "flowforge"
version = "0.1.0"
description = "API Workflow Orchestration OpenEnv environment"

authors = [
    { name = "Pranav Kumar", email = "kondapurampranav@gmail.com" },
    { name = "Rajat B R", email = "rajatbr13@gmail.com" },
    { name = "Syed Afroz", email = "afroz05102006@gmail.com" }
]

dependencies = [
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

